fix: background color behind menu

--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -545,6 +545,16 @@ section h2 {
   object-fit: cover;
 }
 
+main {
+  margin-top: -10px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
 .menu-container {
   position: relative;
   z-index: 1;
