--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -14,6 +14,15 @@
     object-fit: cover;
 }
 
+main {
+    margin-top: -10px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    @include flex-column;
+}
+
 .menu-container {
     position: relative;
     z-index: 1;
